--- a/软件设计理念.md
+++ b/软件设计理念.md
@@ -141,7 +141,7 @@ int close(int fd);
 
 ## 结尾
 
-以上只是一些摘要，其他部分大家可以去看下书，或者看下他在google的演讲。我个人还是比较赞同他提出的这些想法的。
+以上只是一些摘要，有兴趣的同学可以去看下书，或者看下他在google的演讲。
 
 
 
